--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -37,7 +37,7 @@ jobs:
           git config user.name "chithra2024"
           git config user.email "chithrasaravanan2024@gmail.com"
 
-      - name: Commit and push built files
+      - name: Commit and push built files added secret now
         run: |
           git add docs
           git commit -m "Build Angular app and update docs directory" || echo "No changes to commit"
