--- a/angular.json
+++ b/angular.json
@@ -13,7 +13,8 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/cicd",
+            "outputPath": "docs",
+            "base-href": "https://chithra2024.github.io/angular_deploy4/"
             "main": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
