--- a/angular.json
+++ b/angular.json
@@ -13,9 +13,10 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/cicd",
+            "outputPath": "docs",
+            "baseHref": "https://chithra2024.github.io/angular_deploy4/",
             "index": "src/index.html",
-            "browser": "src/main.ts",
+            "main": "src/main.ts",
             "polyfills": [
               "zone.js"
             ],
